update to gitignore

--- a/StepsOfTheAnemoi/Config/DefaultEngine.ini
+++ b/StepsOfTheAnemoi/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=InventorySystem
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/main_level_persistent.main_level_persistent
-GameDefaultMap=/Game/Levels/main_level_persistent.main_level_persistent
+EditorStartupMap=/Game/Levels/outside_world.outside_world
+GameDefaultMap=/Game/Levels/steps_of_the_anemoi.steps_of_the_anemoi
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
