update to default map settings

--- a/StepsOfTheAnemoi/Config/DefaultEngine.ini
+++ b/StepsOfTheAnemoi/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=InventorySystem
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/outside_world.outside_world
+EditorStartupMap=/Game/Levels/steps_of_the_anemoi.steps_of_the_anemoi
 GameDefaultMap=/Game/Levels/steps_of_the_anemoi.steps_of_the_anemoi
 TransitionMap=
 bUseSplitscreen=True
