--- a/StepsOfTheAnemoi/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/StepsOfTheAnemoi/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -198,11 +198,10 @@ ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 
 [EditorStartup]
-LastLevel=/Game/Levels/outside_world
+LastLevel=/Game/Levels/steps_of_the_anemoi
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.Default=True
@@ -4390,7 +4389,7 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector P
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,ParticleModuleColor.Color.Max,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Color Grading.Color Grading|WhiteBalance,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation Volume,PostProcessVolume.Rendering Features.Rendering Features|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Misc,
+PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 K2Node_VariableGet=TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,StructProperty.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
