--- a/StepsOfTheAnemoi/Config/DefaultInput.ini
+++ b/StepsOfTheAnemoi/Config/DefaultInput.ini
@@ -69,10 +69,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="LookRight",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="LookUpRate",Scale=-1.000000,Key=Gamepad_RightY)
 DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
